# Rust-CE

./: .gitignore  Cargo.toml  LICENSE  README-calc.md  README.md  makefile
.github/workflows/: build.yml
src/: ffi.rs  helper.c  lib.rs  main.rs
