[package]
name = "demo"
version = "0.1.0"
authors = ["maddymakesgames <madelinemakesgames@gmail.com>", "Chris Moore <git@chrismoore.dev>"]
edition = "2021"

# rust-version = "2022-03-09"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
